# dotfiles.nix

./: .gitignore  .gitmodules  LICENSE  README.md  flake.nix  justfile  shell.nix
config/: xinitrc
config/awesome/: rc.lua
config/discocss/: custom.css
config/hilbish/: init.lua
config/nvim/: init.lua
config/wezterm/: wezterm.lua
config/xmonad/: xmonad.hs
home-manager/: admin.nix  home.nix  nvim.nix  sajenim.nix  xsession.nix
home-manager/admin/: home.nix
home-manager/common/jade/xmobar/xmobar-config/: xmobar-config.cabal
home-manager/common/jade/xmobar/xmobar-config/src/: xmobar-top.hs
home-manager/erika/: home.nix  id_ed25519_sk.pub
home-manager/jade/: default.nix
home-manager/jade/xmobar/xmobar-jsm/: LICENSE  README.md  flake.nix  xmobar-jsm.cabal
home-manager/programs/: discocss.nix  git.nix  mangohud.nix  nvim.nix  zsh.nix
home-manager/sabrina/: home.nix  id_ed25519.pub
home-manager/sajenim/: fuchsia.nix  home.nix  id_ed25519_sk.pub  p6p_biometric.pub  sajenim_sk.pub  viridian.nix  xinitrc
home-manager/services/: picom.nix
modules/home-manager/: default.nix  jellyfin-rpc.nix
modules/nixos/: default.nix  jellyfin-rpc.nix  qbittorrent.nix
nixos/: configuration.nix  hardware-configuration.nix  jade.nix
nixos/common/: system-tools.nix
nixos/fuchsia/: configuration.nix  hardware-configuration.nix  id_ed25519_sk.pub  ssh_host_ed25519_key.pub
nixos/lavender/: .configuration.nix.swp  configuration.nix  (+2 more)
overlays/: default.nix  raster2dymolw_v2
pkgs/: default.nix
secrets/: microbin.age  secrets.nix  traefik.age  wireguard.age
(+271 files in other folders)
