cabal-version:      3.0
name:               xmobar-config
version:            0.1.0.0
synopsis:           A Minimalistic Text Based Status Bar
description:        my xmobar configuration
license:            BSD-3-Clause
author:             sajenim
maintainer:         its.jassy@pm.me
build-type:         Simple

executable xmobar-top
    main-is:          xmobar-top.hs
    hs-source-dirs:   src
    ghc-options:      -Wall -threaded
    build-depends:    base,
                      xmobar
    default-language: Haskell2010

